# hw_19_2_django

./: pyproject.toml
catalog/: views.py
catalog/templates/catalog/: contacts.html  home.html
config/: settings.py
